--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     },
     "require": {
-        "php": "^7.1",
+        "php": ">=7.1",
         "nikic/fast-route": "^1.3",
         "react/http": "^1.1",
         "react/promise": "^2.7"
