--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,8 @@ on:
 
 jobs:
   PHPUnit:
-    runs-on: ubuntu-latest
+    name: PHPUnit (PHP ${{ matrix.php }})
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         php:
@@ -17,8 +18,7 @@ jobs:
           - 7.1
     steps:
       - uses: actions/checkout@v2
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
+      - uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
           coverage: xdebug
@@ -27,4 +27,45 @@ jobs:
         if: ${{ matrix.php >= 7.3 }}
       - run: vendor/bin/phpunit --coverage-text -c phpunit.xml.legacy
         if: ${{ matrix.php < 7.3 }}
+
+  Built-in-webserver:
+    name: Built-in webserver (PHP ${{ matrix.php }})
+    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        php:
+          - 8.0
+          - 7.4
+          - 7.3
+          - 7.2
+          - 7.1
+    steps:
+      - uses: actions/checkout@v2
+      - uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+      - run: composer install --no-dev
+      - run: php examples/index.php &
+      - run: sleep 0.1
+      - run: bash tests/acceptance.sh
+
+  PHP-webserver:
+    name: PHP webserver (PHP ${{ matrix.php }})
+    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        php:
+          - 8.0
+          - 7.4
+          - 7.3
+          - 7.2
+          - 7.1
+    steps:
+      - uses: actions/checkout@v2
+      - uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+      - run: composer install --no-dev
+      - run: php -S localhost:8080 examples/index.php &
+      - run: sleep 0.1
       - run: bash tests/acceptance.sh
