--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "react/promise": "^2.7"
     },
     "require-dev": {
-        "clue/reactphp-sqlite": "^1.0.0"
+        "clue/reactphp-sqlite": "^1.0.0",
+        "phpunit/phpunit": "^9.5 || ^7.5"
     }
 }
