Improve tests to await port being open instead of relying on timer

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
           php-version: ${{ matrix.php }}
       - run: composer install --no-dev
       - run: php examples/index.php &
-      - run: sleep 0.1
+      - run: bash tests/await.sh
       - run: bash tests/acceptance.sh
 
   nginx-webserver:
@@ -68,7 +68,7 @@ jobs:
       - run: composer install --no-dev
       - run: docker run -d -v "$PWD":/home/frugal php:${{ matrix.php }}-fpm
       - run: docker run -d -p 80:80 --link $(docker ps -qn1):php -v "$PWD":/home/frugal -v "$PWD"/examples/nginx/nginx.conf:/etc/nginx/conf.d/default.conf nginx:stable-alpine
-      - run: sleep 1
+      - run: bash tests/await.sh http://localhost
       - run: bash tests/acceptance.sh http://localhost
 
   Apache-webserver:
@@ -89,7 +89,7 @@ jobs:
           php-version: ${{ matrix.php }}
       - run: composer install --no-dev
       - run: docker run -d -p 80:80 -v "$PWD":/home/frugal php:${{ matrix.php }}-apache sh -c "rmdir /var/www/html;ln -s /home/frugal/examples/apache /var/www/html;ln -s /etc/apache2/mods-available/rewrite.load /etc/apache2/mods-enabled; apache2-foreground"
-      - run: sleep 0.1
+      - run: bash tests/await.sh http://localhost
       - run: bash tests/acceptance.sh http://localhost
 
   PHP-webserver:
@@ -110,5 +110,5 @@ jobs:
           php-version: ${{ matrix.php }}
       - run: composer install --no-dev
       - run: php -S localhost:8080 examples/index.php &
-      - run: sleep 0.1
+      - run: bash tests/await.sh
       - run: bash tests/acceptance.sh
