--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "require": {
         "php": ">=7.1",
         "nikic/fast-route": "^1.3",
+        "react/event-loop": "dev-master#1a709e2 as 1.2.0",
         "react/http": "^1.1",
         "react/promise": "^2.7"
     },
