--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "nikic/fast-route": "^1.3",
         "react/event-loop": "^1.2.0",
         "react/http": "^1.1",
-        "react/promise": "^2.7"
+        "react/promise": "^2.7",
+        "php-di/php-di": "^6.3.0",
+        "psr/log": "^1.1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5 || ^7.5"
