--- a/.github/workflows/deploy2website.yml
+++ b/.github/workflows/deploy2website.yml
@@ -11,4 +11,4 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - run: |
-          curl -X POST -u ":{{ secrets.WEBSITE_PAT}}" -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/clue/framework-x-website/actions/workflows/ci.yml/dispatches -d '{"ref":"main"}'
+          curl -X POST -u ":${{ secrets.WEBSITE_PAT}}" -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/clue/framework-x-website/actions/workflows/ci.yml/dispatches -d '{"ref":"main"}'
