--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,10 +43,10 @@ nav:
     - async/promises.md
   - Integrations:
     - integrations/database.md
-    - integrations/filesystem.md
-    - "Child processes": integrations/child-processes.md
-    - integrations/streaming.md
-    - integrations/authentication.md
-    - integrations/sessions.md
-    - integrations/templates.md
-    - integrations/queueing.md
+    - "⚠ Filesystem": integrations/filesystem.md
+    - "⚠ Child processes": integrations/child-processes.md
+    - "⚠ Streaming": integrations/streaming.md
+    - "⚠ Authentication": integrations/authentication.md
+    - "⚠ Sessions": integrations/sessions.md
+    - "⚠ Templates": integrations/templates.md
+    - "⚠ Queueing": integrations/queueing.md
