Add instructions for authorization header under Apache

--- a/examples/apache/.htaccess
+++ b/examples/apache/.htaccess
@@ -3,3 +3,6 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule .* index.php
+
+# This adds support for authorization header
+SetEnvIf Authorization .+ HTTP_AUTHORIZATION=$0
