--- a/tests/Dockerfile-production
+++ b/tests/Dockerfile-production
@@ -26,4 +26,4 @@ ENV X_LISTEN 0.0.0.0:8080
 EXPOSE 8080
 
 USER nobody:nobody
-ENTRYPOINT php public/index.php
+ENTRYPOINT ["php", "public/index.php"]
