--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5 || ^7.5",
+        "psr/container": "^2 || ^1",
         "react/async": "^4@dev || ^3@dev"
     },
     "autoload": {
