--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,13 @@
     "require": {
         "php": ">=7.1",
         "nikic/fast-route": "^1.3",
+        "react/async": "^4 || ^3",
         "react/http": "^1.6",
         "react/promise": "^2.7"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5 || ^7.5",
-        "psr/container": "^2 || ^1",
-        "react/async": "^4@dev || ^3@dev"
+        "psr/container": "^2 || ^1"
     },
     "autoload": {
         "psr-4": {
