--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         "php": ">=7.1",
         "nikic/fast-route": "^1.3",
         "react/async": "^4 || ^3",
-        "react/http": "^1.8@dev || ^1.7",
-        "react/promise": "^3@dev || ^2.7"
+        "react/http": "^1.8",
+        "react/promise": "^3 || ^2.7"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5 || ^7.5",
