Test on PHP 8.2 and update test environment

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,4 +17,7 @@
             <directory>./src/</directory>
         </include>
     </coverage>
+    <php>
+        <ini name="error_reporting" value="-1" />
+    </php>
 </phpunit>
