--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,12 @@
 # exclude dev files from export to reduce archive download size
 /.gitattributes export-ignore
+/.github/ISSUE_TEMPLATE/ export-ignore
 /.github/workflows/ export-ignore
 /.gitignore export-ignore
 /docs/ export-ignore
 /examples/ export-ignore
 /mkdocs.yml export-ignore
+/phpstan.neon.dist export-ignore
 /phpunit.xml.dist export-ignore
 /phpunit.xml.legacy export-ignore
 /tests/ export-ignore
