--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "react/promise": "^3 || ^2.7"
     },
     "require-dev": {
-        "phpstan/phpstan": "1.8.10",
+        "phpstan/phpstan": "1.8.10 || 1.4.10",
         "phpunit/phpunit": "^9.5 || ^7.5",
         "psr/container": "^2 || ^1"
     },
