Update test environment to PHPUnit 10

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "require-dev": {
         "phpstan/phpstan": "1.9.2 || 1.4.10",
-        "phpunit/phpunit": "^9.5 || ^7.5",
+        "phpunit/phpunit": "^10 || ^9.5 || ^7.5",
         "psr/container": "^2 || ^1"
     },
     "autoload": {
