Update test suite to ensure 100% code coverage

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,7 +6,8 @@
          bootstrap="vendor/autoload.php"
          cacheResult="false"
          colors="true"
-         convertDeprecationsToExceptions="true">
+         convertDeprecationsToExceptions="true"
+         stderr="true">
     <testsuites>
         <testsuite name="Framework X test suite">
             <directory>./tests/</directory>
