Add `FiberStub` to achieve 100% code coverage for PHP < 8.1

--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,9 @@
     "autoload-dev": {
         "psr-4": {
             "FrameworkX\\Tests\\": "tests/"
-        }
+        },
+        "files": [
+            "tests/FiberStub.php"
+        ]
     }
 }
