--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,15 @@
         "php": ">=7.1",
         "nikic/fast-route": "^1.3",
         "react/async": "^4 || ^3",
-        "react/http": "^1.8",
-        "react/promise": "^3 || ^2.7"
+        "react/http": "^1.9",
+        "react/promise": "^3 || ^2.10",
+        "react/socket": "^1.13"
     },
     "require-dev": {
-        "phpstan/phpstan": "1.10.6 || 1.4.10",
+        "phpstan/phpstan": "1.10.16 || 1.4.10",
         "phpunit/phpunit": "^9.6 || ^7.5",
-        "psr/container": "^2 || ^1"
+        "psr/container": "^2 || ^1",
+        "react/promise-timer": "^1.9"
     },
     "autoload": {
         "psr-4": {
