--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=7.1",
         "nikic/fast-route": "^1.3",
-        "react/async": "^4.3 || ^3",
+        "react/async": "^4.3 || ^3.1",
         "react/http": "^1.11",
         "react/promise": "^3.2",
         "react/socket": "^1.15"
@@ -21,8 +21,7 @@
     "require-dev": {
         "phpstan/phpstan": "1.12.11 || 1.4.10",
         "phpunit/phpunit": "^9.6 || ^7.5",
-        "psr/container": "^2 || ^1",
-        "react/promise-timer": "^1.11"
+        "psr/container": "^2 || ^1"
     },
     "autoload": {
         "psr-4": {
