--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         "nikic/fast-route": "^1.3",
         "react/async": "^4 || ^3",
         "react/http": "^1.10",
-        "react/promise": "^3 || ^2.10",
-        "react/socket": "^1.13"
+        "react/promise": "^3",
+        "react/socket": "^1.14"
     },
     "require-dev": {
         "phpstan/phpstan": "1.10.47 || 1.4.10",
