Add `NullRunner` stub for integration tests with `X_EXPERIMENTAL_RUNNER`

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -5,4 +5,8 @@ parameters:
         - src/
         - tests/
 
+    fileExtensions:
+        - php
+        - phpt
+
     reportUnmatchedIgnoredErrors: false
