Improve mkdocs instructions to use SIGINT to stop and separate pull

--- a/docs/compose.yaml
+++ b/docs/compose.yaml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./mkdocs.yml:/project/mkdocs.yml:ro
       - ./:/project/docs/:ro
+    stop_signal: SIGINT
 
   build:
     extends: mkdocs
