--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,8 +105,8 @@ jobs:
         with:
           php-version: 8.5
       - run: composer install -d tests/integration/
-      - run: docker build -f tests/integration/${{ matrix.dockerfile }} tests/integration/
-      - run: docker run -d -p 8080:8080 -v "$PWD/composer.json":/app/composer.json $(docker images -q | head -n1)
+      - run: docker build -t fx -f tests/integration/${{ matrix.dockerfile }} tests/integration/
+      - run: docker run -d -p 8080:8080 -v "$PWD/composer.json":/app/composer.json fx
       - run: bash tests/await.bash
       - run: bash tests/integration.bash
       - run: docker stop $(docker ps -qn1)
@@ -129,8 +129,8 @@ jobs:
         with:
           php-version: 8.5
       - run: composer install -d tests/integration/
-      - run: docker build -f tests/integration/Dockerfile-basics tests/integration/
-      - run: docker run -d -p 8080:8080 -v "$PWD/composer.json":/app/composer.json $(docker images -q | head -n1)
+      - run: docker build -t fx -f tests/integration/Dockerfile-basics tests/integration/
+      - run: docker run -d -p 8080:8080 -v "$PWD/composer.json":/app/composer.json fx
       - run: docker run -d --net=host -v "$PWD/tests/integration/":/home/framework-x/ -v "$PWD"/tests/integration/${{ matrix.config.path }}:/etc/nginx/conf.d/default.conf nginx:stable-alpine
       - run: bash tests/await.bash http://localhost/
       - run: bash tests/integration.bash http://localhost/
